# ws_s3_3p5_touch_lcd_bsp

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: bme280.rs  display.rs  imu.rs  layout.rs  lib.rs  speaker.rs  touch.rs
