[package]
name = "ws_s3_3p5_bsp"
version = "0.1.9"
edition = "2021"
description = "Board Support Package for Waveshare ESP32-S3-Touch-LCD-3.5B"

[lib]
name = "ws_s3_3p5_bsp"

[dependencies]
anyhow = "1"
log = "0.4"

esp-idf-sys = { version = "0.36" }
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"

embedded-graphics = "0.8"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
